# crypto-dashboard-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  db.json  render.yaml
.github/workflows/: refresh-snapshot.yml
src/: main.cpp
static/: app.js  db.json  index.html  styles.css
static/api/: bootstrap-refresh.js
